fix(styles): update the background-color to increase contrast

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@ body {
   padding-bottom: 3rem;
   font-family: Roboto Mono, monospace;
   font-size: .9em;
-  background-color: #303030;
+  background-color: #37474F;
   color: white;
   overflow: hidden;
 }
